--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
     <link href="ext/build/modern/theme-material/resources/theme-material-all.css"
         rel="stylesheet"></link>
+
+</head>
+<body>
     <script src="ext/build/ext-modern-all-debug.js"></script>
     <script src="ext/build/modern/theme-material/theme-material-debug.js"></script>
     <script src="dist/bundle.js"></script>
-
-</head>
-<body></body>
+</body>
 </html>
